--- a/index.html
+++ b/index.html
@@ -711,5 +711,6 @@
 	<link rel="stylesheet" href="css/animate.css">
 
 	<script src="js/build/build.js"></script>
+	<!-- <script src="js/modules/modalDesign.js"></script> -->
 </body>
 </html>
