add modal consultation

--- a/index.html
+++ b/index.html
@@ -711,6 +711,6 @@
 	<link rel="stylesheet" href="css/animate.css">
 
 	<script src="js/build/build.js"></script>
-	<!-- <script src="js/modules/modalDesign.js"></script> -->
+	<!-- <script src="js/modules/modalConsultation.js"></script> -->
 </body>
 </html>
